08/ingress/fanout-ingress_1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
      - name: foo-con
        image: whatwant/node-web:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
spec:
  selector:
    app: foo-app
  ports:
  - port: 4200
    targetPort: 8080
