08/ingress/fanout-ingress_2.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      labels:
        app: bar-app
    spec:
      containers:
      - name: bar-con
        image: whatwant/node-web:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  selector:
    app: bar-app
  ports:
  - port: 8080
    targetPort: 8080
