08/ingress/svc-deploy-foo.yml
---
kind: Service
apiVersion: v1
metadata:
  name: foo-svc
spec:
  selector:
    app: foo-app
  ports:
  - port: 80
    targetPort: 8080
  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo-app
  template:
    metadata:
      labels:
        app: foo-app
    spec:
      containers:
      - name: foo-container
        image: whatwant/node-web:1.0
        ports:
        - containerPort: 8080
