08/ingress/vhost-ingress-1.yml
---
apiVersion: v1
kind: Service
metadata:
  name: foo-svc
spec:
  selector:
    app: foo-app
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: foo-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo-app
  template:
      metadata:
        labelSs:
          app: foo-app
      spec:
          containers:
          - name: bar-container
            image: whatwant/node-web:1.0
            ports:
            - containerPort: 8080
