08/ingress/vhost-ingress-2.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bar-svc
spec:
  selector:
    app: bar-app
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: bar-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bar-app
  template:
      metadata:
        labels:
          app: bar-app
      spec:
          containers:
          - name: bar-container
            image: whatwant/node-web:1.0
            ports:
            - containerPort: 8080
