08/ingress/fanout-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-fanout-example
#  annotations:
#    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: foo-svc
            port:
              number: 4200

  - http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: bar-svc
            port:
             number: 8080
